# venn-diskspace

./: .gitignore  CLAUDE.md  Makefile  MyIcon.icns  README.md  RELEASENOTES.txt  package-lock.json  package.json  release.sh
.claude/: settings.local.json
.github/workflows/: build.yml
src/: index.html
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: main.rs  scanner.rs
