[package]
name = "venn_diskspace"
version = "1.0.0"
description = "Interactive disk usage visualization"
edition = "2021"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[profile.release]
opt-level   = "s"
strip       = true
lto         = true
codegen-units = 1
panic       = "abort"
